<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:text="@string/melanoma_detector"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:contentDescription="@string/photo"
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title"
        android:layout_marginTop="10sp" />


    <TextView
        android:id="@+id/guideText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:background="@android:color/black"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:text="@string/take_or_select_a_photo_to_analyze"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_below="@id/probabilityText"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/classified_as"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/classified"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="10sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="#C30000"
        android:textStyle="bold"
        android:textSize="27sp"
        android:id="@+id/result"
        android:layout_below="@+id/classified"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="#000000"
        android:textSize="18sp"
        android:id="@+id/probabilityText"
        android:layout_below="@+id/result"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:lineSpacingExtra="4sp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCamera"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:layout_below="@id/guideText"
        android:layout_marginStart="20dp"

        android:layout_marginTop="20dp"
        android:text="@string/take_picture"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@android:drawable/ic_menu_camera"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGallery"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@id/guideText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/btnCamera"
        android:text="@string/launch_gallery"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:icon="@android:drawable/ic_menu_gallery"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCamera"
        android:layout_centerHorizontal="true"
        android:text="@string/info"
        android:layout_marginTop="25dp"
        app:icon="@android:drawable/ic_menu_info_details"
        />

</RelativeLayout>