<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white"
    >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="10dp"
        android:text="Wykrywacz czerniaka"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />

    <ImageView
        android:contentDescription="@string/photo"
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title"
        android:layout_marginTop="10sp" />


    <TextView
        android:id="@+id/guideText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/probabilityText"
        android:layout_marginTop="-50dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/black"
        android:padding="16dp"
        android:text="Zrób lub wybierz zdjęcie do analizy"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/sklasyfikowano_jako"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:id="@+id/classified"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="10sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="#C30000"
        android:textStyle="bold"
        android:textSize="27sp"
        android:id="@+id/result"
        android:layout_below="@+id/classified"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textColor="#000000"
        android:textSize="18sp"
        android:id="@+id/probabilityText"
        android:layout_below="@+id/result"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:lineSpacingExtra="4sp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCamera"
        android:layout_width="167dp"
        android:layout_height="100dp"
        android:layout_below="@id/guideText"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        android:text="ZRÓB ZDJĘCIE"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:icon="@android:drawable/ic_menu_camera"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGallery"
        android:layout_width="167sp"
        android:layout_height="100sp"
        android:layout_below="@id/guideText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@id/btnCamera"
        android:text="WYBIERZ Z GALERII"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:icon="@android:drawable/ic_menu_gallery"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCamera"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/info"
        app:icon="@android:drawable/ic_menu_info_details"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btnInfo"
        android:layout_below="@id/btnGallery"
        android:layout_marginLeft="20dp"
        android:text="Zapisz"
        android:enabled="false"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/btnInfo"
        android:layout_below="@id/btnGallery"
        android:layout_marginRight="20dp"
        android:text="Historia"
        android:enabled="true"
        />

</RelativeLayout>